--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "better-auth": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "^0.43.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-safe-action": "^7.10.8",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
     "react": "^19.0.0",
